bootstrap/envoy/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
  annotations:
    metallb.io/address-pool: public-envoy
spec:
  gatewayClassName: envoy-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: test.envoy.niveri.dev
      allowedRoutes:
          namespaces:
            from: All  # Change this from "Same" to "All"
